[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/controller.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="controller" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="."]
margin_right = 149.0
margin_bottom = 101.0
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="accelerate_button" type="TouchScreenButton" parent="."]
position = Vector2( 572.789, 128.878 )
scale = Vector2( 5.94478, 5.63154 )
normal = ExtResource( 2 )

[node name="decelerate_button" type="TouchScreenButton" parent="."]
position = Vector2( 74.4626, 130.31 )
scale = Vector2( 5.94478, 5.63154 )
normal = ExtResource( 2 )
[connection signal="pressed" from="accelerate_button" to="." method="_on_accelerate_button_pressed"]
[connection signal="released" from="accelerate_button" to="." method="_on_accelerate_button_released"]
[connection signal="pressed" from="decelerate_button" to="." method="_on_decelerate_button_pressed"]
[connection signal="released" from="decelerate_button" to="." method="_on_decelerate_button_released"]
